--- a/Testing plan.html
+++ b/Testing plan.html
@@ -50,5 +50,15 @@
 <h2> 4. Acceptence tests </h2>
 <p> Voor de acceptance test hebben we overleg gehad met onze klant. We hebben samen met hen de volgende vragen opgesteld die we aan de gebruikers van de applicatie zouden willen voorleggen: </p>
 <ul style= "list-style-type:square">
-<li></li>
+<li>Is de app snel genoeg? Is de responstijd van twee seconden voor elke pagina niet te lang?</li>
+<li>Zijn er functies die jullie als gebruikers missen en die jullie wel essentieel vinden? Zou er nog ergens een extra mogelijkheid moeten zijn?</li>
+<li>Is de app overzichtelijk? Er is iets niet duidelijk? Zijn jullie als gebruikers tevreden over de inrichting? </li>
+<li>Is de app gebruiksvriendelijk? Zijn jullie als gebruikers tevreden over het design? Kunnen jullie de gegevens op een eenvoudige manier invoeren in het systeem en is het platform makkelijk te gebruiken? Niet te ingewikkeld?</li>
+<li>Zouden jullie nog op een andere manier willen communiceren met de chauffeur/passagier? Of is de berichtenservice via de applicatie voldoende?</li>
+<li>Vinden jullie de Wallet-methode een juiste methode voor de betalingen? Is het handig om de betalingen zo via deze portemonnee met iDeal te doen? </li>
+<li>Zijn de ophaal- en afzetpunten voldoende? Is het duidelijk waar jullie opgehaald en afgezet kunnen worden?</li>
+<li>Zouden jullie nog op een andere manier, dan via de email en via de website, een melding willen krijgen over het beantwoorden van de ritaanvraag? Of is via de website en via de mail voldoende?</li>
+<li>Vinden jullie de sterrenrating van 1 tot 5 een goede manier om de chauffeur of de meerijders te beoordelen? Is dit een duidelijke en handig schaal?</li>
+<li>Vraag aan chauffeurs: voelen jullie je, als chauffeur, comfortabel bij de manier van betalen? Is het moment van betaling een goed moment?</li>
+
 </ul>
