testing plan stap 2, 3 en 4
+ vervelende punt in requirements

--- a/GOEDE REQUIREMENTS.html
+++ b/GOEDE REQUIREMENTS.html
@@ -16,7 +16,7 @@
 <p>Het project dient gebruiksklaar te zijn in augustus 2019. Voor dit project is een budget beschikbaar gesteld van 13.000 euro waarbinnen wij moeten blijven. De resources die wij gaan gebruiken.</p>
 
 <h2>Randvoorwaarden</h2>
-<p>.Het carpoolplatform voor studenten en medewerkers moet in ieder geval uit een website
+<p>Het carpoolplatform voor studenten en medewerkers moet in ieder geval uit een website
 bestaan die te gebruikt kan worden door nationale en internationale studenten. Dit houdt in
 dat de website naast Nederlands ook in het Engels gebruikt moet kunnen worden. Naast
 een kostenbesparende functie van het platform heeft het ook een maatschappelijke fuctie,
